# ORCA

./: .gitattributes  .gitignore  LICENSE  README.md  README_BIOLOGICAL_CASE_STUDY_AND_ARCHIVE.md  README_FINAL_ORCA_GDSC2_EXPERIMENT.md  pyproject.toml  requirements-omics-drug-response.txt  requirements.txt
docs/: USAGE.md
experiments/: build_morgan_fingerprint_dataset.py  ihdp_orca_ablation_all4.py  make_biological_case_study.py  map_portal_compounds_smiles.py  news_baselines_all4.py  news_orca_ablation_all4.py  omics_drug_response.py  orca_chloride.py  prepare_omics_drug_csv.py  run_drnet_vcnet_csv_compare.py  run_final_orca_family.py  run_repeated_omics_benchmark.py
orca/: __init__.py  config.py  data.py  metrics.py  model.py  nuisance.py  trainer.py  utils.py
scripts/: run_orca.py
