[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orca-causal"
version = "0.1.0"
description = "ORCA: Orthogonal Residual Causal Architecture for treatment-response estimation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.0",
  "tqdm>=4.66"
]

[tool.setuptools.packages.find]
include = ["orca*"]
